# fettle

./: .fettle-ignore  .fettle.toml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  action-entrypoint.py  action.yml  pyproject.toml  requirements.txt  setup.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  fettle-reusable.yml  release.yml
benchmarks/: budgets.json
commands/: baseline.md  explain.md  lean-debt.md  learn.md  mcp-approve.md  mcp-revoke.md  ops-review.md  plan-activate.md  plan-complete.md  pr-review.md  preflight.md  quality.md  report.md  review.md  security-review.md  threat-model.md  worklog.md
docs/: AUDIT-GPT55-v2.md  AUDIT-GPT55.md  CONFIG.md  OPENCODE.md  PLAN-v050-adaptive.md  ROADMAP.md  SPEC-dispatcher-v2.md  WORKPACKAGES-v050.md  ci-enforcement-plan.md  continuity-traceability-plan.md  fettle-enterprise-product-plan.md  fettle-expansion-plan.md  fettle-swebok-gaps-plan.md  fettle-v08-plan-sol-v2.md  fettle-v08-plan-sol.md  fettle-v09-plan.md  fettle-v10-enterprise-plan.md  fettle-v10-plan-compliant.md  fettle.schema.json
evals/: README.md
evals/scenarios/hook-catches-debug-statement/: scenario.yaml
evals/scenarios/plan-gate-nudges-multifile/: scenario.yaml
fettle/: __init__.py  _resources.py  advisory.py  ai_summaries.py  artifact_gate.py  autofix.py  baseline.py  bash_audit.py  bench.py  blackduck_adapter.py  boundary_rules.py  boundary_scan.py  cache.py  changeset.py  ci.py  ci_diagnose.py  cli.py  commit_message.py  complexity_check.py  config.py  config_protect.py  config_schema.py  coverage_gate.py  cross_review.py  dep_check.py  deploy_gate.py  destructive_guard.py  discipline_link.py  dispatcher.py  dispatcher_aggregate.py  dispatcher_registry.py  doctor.py  entry_points.py  environment.py  event.py  explain.py  fp_stamp.py  health_telemetry.py  import_graph.py  init_cmd.py  (+53 more)
fettle/adapters/: __init__.py  go_adapter.py  python_adapter.py  rust_adapter.py  typescript_adapter.py
fettle/agents/: __init__.py  claude_code.py  opencode.py
fettle/tests/: test_hook_contracts.py
hooks/: hooks.json  hooks.json.legacy  subagent_inject.js
integrations/opencode/: fettle.ts
integrations/vscode/: README.md  package-lock.json  package.json
integrations/vscode/src/: extension.ts
rules/: .ruff.toml  go-antipatterns.yml  llm-antipatterns.yml  ts-antipatterns.yml
scripts/: __init__.py  __main__.py  action_entrypoint.py  ai_summaries.py  artifact_gate.py  autofix.py  baseline.py  bash_audit.py  bench.py  blackduck_adapter.py  boundary_rules.py  boundary_scan.py  cache.py  check_runner.py  checker.py  ci.py  ci_diagnose.py  ci_ingest.py  cli.py  commit_message.py  complexity_check.py  config.py  config_protect.py  config_v050.py  coverage_gate.py  debt_report.py  dep_check.py  deploy_gate.py  destructive_guard.py  dispatcher.py  dispatcher_aggregate.py  dispatcher_registry.py  dispatcher_types.py  doctor.py  effectiveness_report.py  entry_points.py  evals_runner.py  explain.py  finding.py  fp_stamp.py  (+57 more)
scripts/adapters/: __init__.py  go_adapter.py  python_adapter.py  rust_adapter.py  typescript_adapter.py
scripts/tests/: test_hook_contracts.py
templates/: ci-fettle.yml  claude-md-addon.md  gitlab-ci.yml  ops-review.md  pre-commit-config.yaml  preflight.md
tests/: conftest.py  test_action_entrypoint.py  test_adapter.py  test_advanced.py  test_advisory.py  test_agents.py  test_artifact_gate.py  test_audit_report.py  test_baseline.py  test_bash_audit.py  test_bench.py  test_bootstrap_gate.py  test_boundary_rules.py  test_boundary_scan.py  test_changeset.py  test_check_runner.py  test_ci.py  test_ci_diagnose.py  test_ci_ingest.py  test_cli.py  test_commit_message.py  test_complexity.py  test_config.py  test_config_protect.py  test_config_schema.py  test_config_v050.py  test_coverage_gate.py  test_debt_report.py  test_debug_detect.py  test_dep_check.py  test_deploy_gate.py  test_destructive_guard.py  test_discipline_link.py  test_dispatcher.py  test_doctor.py  test_entry_points.py  test_environment.py  test_evals_runner.py  test_finding.py  test_health_telemetry.py  (+64 more)
tests/fixtures/agent_payloads/: conformance.json
tests/fixtures/violations/: bare_except.py  broad_except.py  empty_catch.ts  fetch_no_timeout.ts  health_inversion.py  non_atomic_write.py  orphaned_queue.py  regex_llm_output.py  (+2 more)
(+45 files in other folders)
