[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finefettle"
version = "1.0.2"
description = "Quality enforcement for AI-assisted development — ruff + semgrep + incident-derived rules for Claude Code"
readme = "README.md"
license = "MIT"
authors = [{name = "Milind Gaharwar"}]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0", "pyyaml>=6.0"]
semgrep = ["semgrep>=1.50"]
all = ["semgrep>=1.50", "ruff>=0.4.0"]

[project.scripts]
fettle = "fettle.cli:main"

[project.urls]
Repository = "https://github.com/MilindGaharwar/fettle"
Changelog = "https://github.com/MilindGaharwar/fettle/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["fettle", "fettle.adapters", "fettle.agents"]

[tool.setuptools.package-data]
fettle = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Self-lint config — tests/fixtures contains intentional violations used as
# rule-pack test corpora and must never pollute lint output (audit D9).
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "SIM", "UP", "B"]
ignore = [
    "SIM105",  # contextlib.suppress — try/except is clearer in hook hot paths
    "SIM108",  # ternary — explicit if/else preferred for readability
    "SIM117",  # nested with — allowed where line length would suffer
    "UP042",   # StrEnum migration tracked for the v1.2 package restructure
    "UP035",   # typing imports — same arc
    "SIM102", "SIM110", "SIM114", "SIM115",  # style-only, cleaned incrementally
    "B905",    # zip strict= — not applicable on all supported call sites
]
